deploy my React

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://KhoaHoAndy.github.io/AndyHo",
+  "homepage": "http://KhoaHoAndy.github.io/andyhoprofile/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
